created repositories, refactored controller

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}MySQL-Clickhouse Bridge{% endblock %}</title>
+        <title>{% block title %}MariaDB-Clickhouse Bridge{% endblock %}</title>
         <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}">
         {% block stylesheets %}{% endblock %}
     </head>
