--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -8,7 +8,7 @@
             <a class="nav-item nav-link" href="{{ path('mariadb') }}">MariaDB</a>
         </div>
         <div class="navbar-nav">
-            <a class="nav-item nav-link" href="{{ path('clickhouse') }}">ClickHouse</a>
+            {#<a class="nav-item nav-link" href="{{ path('clickhouse') }}">ClickHouse</a>#}
         </div>
     </div>
 </nav>
