--- a/templates/mariadb/edit.html.twig
+++ b/templates/mariadb/edit.html.twig
@@ -9,9 +9,16 @@
                 <label for="id">Name</label>
                 <input type="text" id="name" name="name" value="{{ name }}" class="form-control">
             </div>
-            <div class="form-group"><label for=""></label><input type="text" class="form-control"></div>
-            <div class="form-group"><label for=""></label><input type="text" class="form-control"></div>
-            <input type="hidden" value="{{ id }}">
+            <div class="form-group">
+                <label for="city">City</label>
+                <input type="text" id="city" name="city" value="{{ city }}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="">Age</label>
+                <input type="text" id="age" name="age" value="{{ age }}" class="form-control">
+            </div>
+            <input type="hidden" name="id" value="{{ id }}">
+            <input type="hidden" name="page" value="{{ page }}">
             <button type="submit" class="btn btn-primary">Edit</button>
         </form>
     </div>
