--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,10 @@
     <body>
         {% include 'partials/navbar.html.twig' %}
         {% block body %}{% endblock %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
         {% block javascripts %}{% endblock %}
+
     </body>
 </html>
