--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,7 +8,11 @@
     <h1>Home Page</h1>
     <!-- TODO: Ostylować tą stronę-->
 
-    <form action="{{ path('copyData') }}" method="post">
+    <div class="alert alert-success hide">
+        Done
+    </div>
+
+    <form id="form" action="{{ path('copyData') }}" method="post">
         <div class="multiselect">
             <div class="selectBox">
                 <select class="form-control">
@@ -23,13 +27,59 @@
                         <label class="form-check-label" for="checkbox{{ key }}">{{ columnName }}</label>
                     </div>
                 {% endfor %}
-
             </div>
         </div>
 
+        <input type="hidden" name="from" value="mariaDB">
         <button class="btn btn-outline-primary my-3">Copy</button>
     </form>
+
+    <div class="package-wrapper">
+
+    </div>
 </div>
 
 
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        $('#form').submit(function (e) {
+            e.preventDefault();
+            var selections = '';
+            document.querySelectorAll('input[type=checkbox]').forEach(function(item) {
+                if (item.checked) {
+                    selections = selections + item.value + ',';
+                }
+            });
+
+            // Todo:: Rozpoczęcie mierzenia czasu
+            var url = $(this).attr('action');
+            var i = 1;
+            check_condition(i);
+            function check_condition(i) {
+               $.ajax({
+                  url: url,
+                  method: 'post',
+                  data: JSON.stringify({
+                      'columns': selections.substr(0, selections.length-1),
+                      'from': 'mariaDB',
+                      'counter': i
+                  })
+              }).done(function (result) {
+                  console.log(result);
+                   if(result.rows.length) {
+                       setTimeout(check_condition, 50, i);
+                   } else {
+                       $('.alert-success').fadeIn();
+
+                       // TODO:: Zakończenie mierzenia czasu
+                   }
+              });
+
+               i++;
+            }
+
+        });
+    </script>
 {% endblock %}
