--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,15 +6,19 @@
 
 <div class="container">
     <h1 class="my-3 text-center">MariaDB - Clickhouse Bridge</h1>
-    <!-- TODO: Ostylować tą stronę-->
 
+    <h5 id="text-helper" class="my-3 text-center hide">Copying data...</h5>
     <div class="alert alert-success hide"></div>
+
+    <div class="progress hide mb-3">
+        <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
 
     <form id="form" action="{{ path('copyData') }}" method="post">
         <div class="multiselect">
             <div class="selectBox">
                 <select class="form-control">
-                    <option>Select columns from mariaDB Engine</option>
+                    <option>Select columns from mariaDB </option>
                 </select>
                 <div class="overSelect"></div>
             </div>
@@ -32,9 +36,6 @@
         <button class="btn btn-outline-primary my-3">Copy</button>
     </form>
 
-    <div class="package-wrapper">
-
-    </div>
     <div class="result"></div>
 </div>
 
