--- a/templates/clickhouse/index.html.twig
+++ b/templates/clickhouse/index.html.twig
@@ -1,9 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}ClickHouse Items{% endblock %}
 
 {% block body %}
     <div class="container">
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success mt-5">
+                {{ message }}
+            </div>
+        {% endfor %}
+
         <h1 class="text-center my-5">ClickHouse items</h1>
         <nav>
             <ul class="pagination justify-content-center">
@@ -15,30 +21,25 @@
             </ul>
         </nav>
 
-        {#<table class="table">#}
-            {#<thead class="thead-light">#}
-            {#<tr>#}
-                {#<th>ID</th>#}
-                {#<th>Name</th>#}
-                {#<th>Age</th>#}
-                {#<th>City</th>#}
-                {#<th></th>#}
-            {#</tr>#}
-            {#</thead>#}
-            {#<tbody>#}
-            {#{% for row in rows %}#}
-                {#<tr>#}
-                    {#<td>{{ row['id'] }}</td>#}
-                    {#<td>{{ row['Name'] }}</td>#}
-                    {#<td>{{ row['Age'] }}</td>#}
-                    {#<td>{{ row['City'] }}</td>#}
-                    {#<td>#}
-                        {#<a href="" class="btn btn-primary">Edit</a>#}
-                        {#<a href="" class="btn btn-danger">Delete</a>#}
-                    {#</td>#}
-                {#</tr>#}
-            {#{% endfor %}#}
-            {#</tbody>#}
-        {#</table>#}
+        <table class="table">
+            <thead class="thead-light">
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Age</th>
+                <th>City</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for row in rows %}
+                <tr>
+                    <td>{{ row['id'] }}</td>
+                    <td>{{ row['Name'] }}</td>
+                    <td>{{ row['Age'] }}</td>
+                    <td>{{ row['City'] }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
     </div>
 {% endblock %}
