--- a/templates/mariadb/edit.html.twig
+++ b/templates/mariadb/edit.html.twig
@@ -6,7 +6,7 @@
     <div class="container">
         <form action="{{ path('mariaDBEditRow', {id: id}) }}" method="post">
             <div class="form-group">
-                <label for="id">Name</label>
+                <label for="name">Name</label>
                 <input type="text" id="name" name="name" value="{{ name }}" class="form-control">
             </div>
             <div class="form-group">
@@ -14,7 +14,7 @@
                 <input type="text" id="city" name="city" value="{{ city }}" class="form-control">
             </div>
             <div class="form-group">
-                <label for="">Age</label>
+                <label for="age">Age</label>
                 <input type="text" id="age" name="age" value="{{ age }}" class="form-control">
             </div>
             <input type="hidden" name="id" value="{{ id }}">
