--- a/templates/mariadb/index.html.twig
+++ b/templates/mariadb/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}MariaDB Items{% endblock %}
 
 {% block body %}
     <div class="container">
@@ -38,12 +38,12 @@
                         <td>{{ row['Name'] }}</td>
                         <td>{{ row['Age'] }}</td>
                         <td>{{ row['City'] }}</td>
-                        <td>
+                        <td class="d-flex">
                             <form action="{{ path('loadMariaDBEditView', {id: row['id'], page: currentPage}) }}">
                                 <input type="hidden" name="page" value="{{ currentPage }}">
                                 <button class="btn btn-primary">Edit</button>
                             </form>
-                            <form action="{{ path('mariaDBDeleteRow', {id: row['id'], page: currentPage}) }}" method="post">
+                            <form class="ml-3" action="{{ path('mariaDBDeleteRow', {id: row['id'], page: currentPage}) }}" method="post">
                                 <button class="btn btn-danger" type="submit">Delete</button>
                             </form>
                         </td>
