--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,15 +10,31 @@
     <h5 id="text-helper" class="my-3 text-center hide">Copying data...</h5>
     <div class="alert alert-success hide"></div>
 
+
     <div class="progress hide mb-3">
         <div class="progress-bar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
 
+    <div class="d-flex justify-content-center" >
+        <div class="spinner-border text-primary hide" id="spinner" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
+
     <form id="form" action="{{ path('copyData') }}" method="post">
+        <div class="form-group">
+            <label for="from">Select From</label>
+            <select class="form-control font-weight-bold" name="from" id="from">
+                <option selected value="mariaDB">MariaDB</option>
+                <option value="clickHouse">ClickHouse</option>
+            </select>
+        </div>
+
         <div class="multiselect">
             <div class="selectBox">
-                <select class="form-control">
-                    <option>Select columns from mariaDB </option>
+                <label for="columns">Select Columns</label>
+                <select class="form-control" id="columns">
+                    <option>Select columns</option>
                 </select>
                 <div class="overSelect"></div>
             </div>
@@ -33,7 +49,9 @@
         </div>
 
         <input type="hidden" name="from" value="mariaDB">
-        <button class="btn btn-outline-primary my-3">Copy</button>
+        <div class="d-flex justify-content-center">
+            <button class="btn btn-outline-primary my-3">Copy</button>
+        </div>
     </form>
 
     <div class="result"></div>
